解决部署到服务器上收不到报文的问题

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,217 @@
-<html>
-<body>
-<h2>Hello World!</h2>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html class="" data-desktopBrowser="true">
+<head>
+  <meta charset="UTF-8"/>
+  <title>草根医生</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+  <meta name="description" content="HomeTouch offers a wide variety of vetted private carers, that can be booked online. Find, interview, and book home carers or live-in-carers across the UK">
+
+  <link rel="canonical" href="https://www.htdoctor.net/"/>
+
+
+
+  <meta name="og:title" content="htdoctor: Health consulting &amp; Medicine search &amp; Disease Search  in the China | htdoctor">
+  <meta name="og:description" content="htdoctor offers a wide variety of vetted private carers, that can be booked online. Find, interview, and book home carers or live-in-carers across the UK">
+  <meta name="og:type" content="website"/>
+  <meta name="og:url" content="https://www.htdoctor.net/">
+  <meta name="og:image" content="./public/images/social-preview.jpg">
+  <meta name="og:site_name" content="海豚医生">
+  <meta name="og:brand" content="海豚医生">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@海豚医生">
+  <meta name="twitter:creator" content="@海豚医生">
+  <meta name="twitter:title" content="Private Home Care: Find &amp; Book Carers in the UK | HomeTouch">
+  <meta name="twitter:description" content="HomeTouch offers a wide variety of vetted private carers, that can be booked online. Find, interview, and book home carers or live-in-carers across the UK">
+  <meta name="twitter:image" content="./public/images/social-preview.jpg">
+
+  <meta name="author" content="海豚医生"/>
+  <meta name="rating" content="General"/>
+  <meta name="copyright" content="Â© 海豚医生 2017. All Rights Reserved"/>
+  <meta name="apple-mobile-web-app-title" content="海豚医生">
+  <meta name="application-name" content="海豚医生">
+  <meta name="msapplication-TileColor" content="#1c5799">
+  <meta name="msapplication-TileImage" content="favicons/mstile-144x144.png">
+  <meta name="msapplication-config" content="favicons/browserconfig.xml">
+
+
+  <meta name="google-site-verification" content="vbZFU1ge9v8ob518RGYDQ-TyZUP4bbdwYh5p_jVL3Mo" />
+  <meta name="google-site-verification" content="qBo0hcFHJq_CYbnRPp_zHoaTyJtn7O4nx9LZ-qiWcZw" />
+
+<!--   <link rel="shortcut icon" href="image/favicon.ico">
+  <link rel="apple-touch-icon" href="image/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="57x57" href="image/apple-touch-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="image/apple-touch-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="image/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="image/apple-touch-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="image/apple-touch-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="image/apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="image/apple-touch-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="image/apple-touch-icon-152x152.png">
+  <link rel="icon" type="image/png" href="image/favicon-160x160.png" sizes="160x160">
+  <link rel="icon" type="image/png" href="image/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/png" href="image/favicon-16x16.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="image/favicon-32x32.png" sizes="32x32"> -->
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"  media="screen"/>
+
+  <!-- build:css(.) /public/css/user_signup_vendors.min.css -->
+  <link rel="stylesheet" type="text/css" href="css/material.custom.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <!-- endbuild -->
+  <!-- build:css(.) /public/css/website.min.css -->
+  <link rel="stylesheet" href="css/bootstrap.css.1">
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="css/hometouch.css">
+  <link rel="stylesheet" type="text/css" href="css/carer-badges.css">
+  <!-- endbuild -->
+
+  
+  <style>html.ng-cloak {display: none;}</style>
+</head>
+<body ng-cloak>
+
+  <div id="alerts-container" ng-include="'/public/admin/templates/alerts.html'"></div>
+
+  <div class="home-page">
+      <header class="ht-header">
+        <div class="row -padding-y-5">
+          <div class="col-xs-5 col-sm-4 partial">
+            <a href="/" class="ht-image -image-logo pull-left">
+            	<!-- <img src="image/ht-logo.png" alt="logo"> -->
+            	<img src="image/dolphin48x48.png" alt="logo">
+            </a>
+            <a href="/" class="ht-image -image-logo -mobile pull-left"><img src="image/ht-logo-mobile.png" alt="logo"></a>
+          </div>
+          <div class="col-xs-7 col-sm-8 partial text-right">
+            <ul class="ht-list -list-main">
+              <li class="list-item">
+                  <!-- <a href="/carer_signup">海豚医生</a> -->
+                  <a href="">海豚医生</a>
+              </li>
+              <li class="list-item -item-tel">
+                <a href="tel:18689872727">
+                  <i class="ht-icon icon-phone"></i>
+                      <span>
+                        186 8987 2727
+                      </span>
+                </a>
+              </li>
+      
+              <!-- <li class="list-item -login">
+                  <a href="/app/login">登录</a>
+              </li>
+              <li class="list-item -item-menu">
+                <a class="js-menu" href="javascript:void(0)">
+                  <i class="ht-icon icon-hamburger"></i>
+                  <span>X</span>
+                </a>
+              </li> -->
+            </ul>
+          </div>
+        </div>
+      </header>
+
+		<!-- <section> --> 
+		<article class="ht-wrapper -wrapper-cta -lg">
+		<div class="ht-wrapper-inner -wrapper-cta">
+			<h1 class="ht-title -title-lg">您的健康我有责任，海豚医生</h1>
+
+			<div class="container">
+				<div class="ht-wrapper -wrapper-negative row">
+					<div class="col-md-4" onmouseover="this.style.cursor='pointer'"
+						onclick="document.location='health/search?type=4';">
+						<div class="ht-box -box-intro clearfix">
+							<i class="ht-icon icon-search"></i>
+							<div class="content">
+								<h3>体检分析</h3>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4" onmouseover="this.style.cursor='pointer'"
+						onclick="document.location='health/search?type=3';">
+						<div class="ht-box -box-intro clearfix">
+							<i class="ht-icon icon-search"></i>
+							<div class="content">
+								<h3>病症诊断</h3>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4" onmouseover="this.style.cursor='pointer'"
+						onclick="document.location='health/search?type=2';">
+						<div class="ht-box -box-intro clearfix">
+							<!-- <i class="ht-icon icon-talk"></i> -->
+							<i class="ht-icon icon-search"></i>
+							<div class="content">
+								<h3>药品搜索</h3>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4" onmouseover="this.style.cursor='pointer'"
+						onclick="document.location='health/search?type=1';">
+						<div class="ht-box -box-intro clearfix">
+							<!-- <i class="ht-icon icon-tick"></i> -->
+							<i class="ht-icon icon-search"></i>
+							<div class="content">
+								<h3>疾病搜索</h3>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		</article> 
+		<!-- </section> -->
+ 
+ 	<!-- <div id="footer">
+		<p> © 2017 - 2019海豚医生</p>
+	</div> -->
+  </div>
+
+  
+
+
+  <!-- IE Compatibility shims -->
+  <!-- Also need a Flexibility/Flexie polyfill -->
+    <!--[if lt IE 9]>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js""></script>
+    <![endif]-->
+
+    <!--[if IE]>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/4.1.7/es5-shim.min.js"></script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/classlist/2014.01.31/classList.min.js"></script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
+      <script src="/public/vendors-local/flexibility/flexibility.js"></script>
+    <![endif]-->
+  <!-- end shims -->
+
+
+
+  <!-- build:js(.) /public/js/website/index.js -->
+  <!--
+  <script src="/public/vendors/jquery/dist/jquery.min.js"></script>
+  <script src="/public/vendors/js-cookie/src/js.cookie.js"></script>
+  <script src="/public/vendors/bootstrap-validator/dist/validator.js"></script>
+  <script src="/public/website/slick.min.js"></script>
+  <script src="/public/website/app.js"></script>
+  <script src="/public/website/navigation.js"></script>
+  <script src="/public/website/quick-filter.js"></script>
+  <script src="/public/website/google-map.js"></script>
+  <script src="/public/website/init.js"></script>
+  <script src="/public/website/lead-capture.js"></script>
+  <script src="/public/website/contact.js"></script>
+  <script src="/public/vendors/bootstrap/js/tooltip.js"></script>
+  <script src="/public/vendors/bootstrap/js/popover.js"></script>
+  <script src="/public/vendors/bootstrap/js/dropdown.js"></script>
+  <script src="/public/vendors/lodash/lodash.js"></script>
+  <script src="/public/js/requestAnimationFrame.js"></script>
+  <script src="/public/vendors-local/material-design-lite/material.min.js"></script>
+  <script src="/public/vendors/jquery-placeholder/jquery.placeholder.js"></script>
+  -->
+  <!-- endbuild -->
+	<div style="margin-top:10px;">
+		<p style="text-align:center;"> 版权所有©2017 海豚医生 琼ICP备17001407号</p>
+	</div>
+
 </body>
 </html>
